# autobot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.dev  Dockerfile.kali  Dockerfile.prod  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requisitos.md  start.sh  worker.py
.claude/: settings.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py  logging_config.py
app/api/: __init__.py  agents.py  auth.py  chat.py  errors.py  metrics.py  middleware.py  oauth.py  patches.py  promote.py  runs.py  scheduler.py  skills.py  subagents.py  tools.py
app/dashboard/: __init__.py  auth_views.py  (+15 more)
docs/: workspace-tool-management.md
scripts/: backup.sh  consolidate_family.py  export-diagnostics.sh  export_diagnostics.py  merge_dispatchers.py  restore.sh  start.dev.sh  start.sh  workspace_tools_manager.py
tests/: conftest.py  test_agent_runner_loop_guard.py  test_agent_runner_max_rounds.py  test_agent_runner_round_trace.py  test_approval_rule.py  test_bundle_tasks_objectives.py  test_codex_token_refresh.py  test_credential_injection.py  test_cron_compat.py  test_error_analysis.py  test_global_tools.py  test_heartbeat_datetimes.py  test_incident_service.py  test_model_client_retry.py  test_patch_service.py  test_patch_validator.py  test_run_bash_venv_path.py  test_run_log_service.py  test_run_service_cost.py  test_schedule_builder.py  test_scheduler_service.py  test_scheduler_sync.py  test_scheduler_tasks.py  test_security_policy.py  test_steering.py  test_timefmt.py  test_workspace_tools_manager.py
(+203 files in other folders)
