[project]
name = "autobot"
version = "0.1.0"
description = "AI agent platform with Flask web gateway and multi-agent architecture"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "Flask-Login>=0.6",
    "Flask-Bcrypt>=1.0",
    "Flask-WTF>=1.2",
    "Flask-Limiter>=3.5",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=5.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.24",
    "cryptography>=41.0",
    "python-dotenv>=1.0",
    "gunicorn>=21.2",
    "tiktoken>=0.5",
    "matrix-nio>=0.24",
    "APScheduler>=3.10",
    "croniter>=2.0",
    "oauth-cli-kit>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
